# robcomp_util

./: burger_insper.yaml  package.xml  setup.cfg  setup.py
launch/: first_node.launch.py
my_package/: package.xml  setup.py
my_package/my_package/: atividade3.py  creeper_pub.py  goto_action.py  goto_amcl.py  module_aruco.py  odom.py  segue_linha_p.py  send_goal.py
robcomp_util/: action_base.py  action_goto.py  action_segue_linha.py  amcl.py  client_goto.py  creeper_detector.py  goto.py  laser.py  mobilenet_detector.py  module_aruco.py  module_net.py  odom.py  package.xml  setup.py  super_client.py  teste_odom_laser.py
robcomp_util/robcomp_util/: andar.py  aruco_detector.py  garra.py  girar.py  goto.py  laser.py  main.py  mobilenet_detector.py  module_aruco.py  module_net.py  odom.py  test_laser.py  test_odom.py  test_odom_laser.py
