<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dpsoler09@gmail.com">borg</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robcomp_interfaces</depend> <!-- Adiciona a dependência para mensagens personalizadas -->
  <depend>action_msgs</depend> <!-- Adiciona a dependência para mensagens de ação -->
  <depend>rosidl_default_generators</depend> <!-- Adiciona a dependência para geração de código de ação -->
  <depend>rosidl_default_runtime</depend> <!-- Adiciona a dependência para tempo de execução de ação -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
